c/src/Box2D/Dynamics/c_box2d_body.h

typedef enum box2d_BodyType {
    box2d_staticBody = 0,
    box2d_kinematicBody,
    box2d_dynamicBody
} box2d_BodyType;
typedef struct box2d_BodyDef {
    box2d_BodyType type;
    box2d_Vec2 position;
    float32 angle;
    box2d_Vec2 linearVelocity;
    float32 angularVelocity;
    float32 linearDamping;
    float32 angularDamping;
    box2d_bool allowSleep;
    box2d_bool awake;
    box2d_bool fixedRotation;
    box2d_bool bullet;
    box2d_bool active;
    void* userData;
    float32 gravityScale;
} box2d_BodyDef;
box2d_Fixture* box2d_Body_CreateFixture(box2d_Body* self, const box2d_FixtureDef* def);
box2d_Fixture* box2d_Body_CreateFixture_shape(box2d_Body* self, const box2d_Shape* shape, float32 density);
void box2d_Body_DestroyFixture(box2d_Body* self, box2d_Fixture* fixture);
void box2d_Body_SetTransform(box2d_Body* self, const box2d_Vec2* position, float32 angle);
const box2d_Transform* box2d_Body_GetTransform(const box2d_Body* self);
const box2d_Vec2* box2d_Body_GetPosition(const box2d_Body* self);
float32 box2d_Body_GetAngle(const box2d_Body* self);
const box2d_Vec2* box2d_Body_GetWorldCenter(const box2d_Body* self);
const box2d_Vec2* box2d_Body_GetLocalCenter(const box2d_Body* self);
void box2d_Body_SetLinearVelocity(box2d_Body* self, const box2d_Vec2* v);
const box2d_Vec2 box2d_Body_GetLinearVelocity(const box2d_Body* self);
void box2d_Body_SetAngularVelocity(box2d_Body* self, float32 omega);
float32 box2d_Body_GetAngularVelocity(const box2d_Body* self);
void box2d_Body_ApplyForce(box2d_Body* self,
                           const box2d_Vec2* force,
                           const box2d_Vec2* point
                           );
void box2d_Body_ApplyForceToCenter(box2d_Body* self, const box2d_Vec2* force);
void box2d_Body_ApplyTorque(box2d_Body* self, float32 torque);
void box2d_Body_ApplyLinearImpulse(box2d_Body* self, const box2d_Vec2* impulse, const box2d_Vec2* point);
void box2d_Body_ApplyAngularImpulse(box2d_Body* self, float32 impulse);
float32 box2d_Body_GetMass(const box2d_Body* self);
float32 box2d_Body_GetInertia(const box2d_Body* self);
void box2d_Body_GetMassData(const box2d_Body* self, box2d_MassData* data);
void box2d_Body_SetMassData(box2d_Body* self, const box2d_MassData* data);
void box2d_Body_ResetMassData(box2d_Body* self);
box2d_Vec2 box2d_Body_GetWorldPoint(const box2d_Body* self, const box2d_Vec2* localPoint);
box2d_Vec2 box2d_Body_GetWorldVector(const box2d_Body* self, const box2d_Vec2* localVector);
box2d_Vec2 box2d_Body_GetLocalPoint(const box2d_Body* self, const box2d_Vec2* worldPoint);
box2d_Vec2 box2d_Body_GetLocalVector(const box2d_Body* self, const box2d_Vec2* worldVector);
box2d_Vec2 box2d_Body_GetLinearVelocityFromWorldPoint(const box2d_Body* self, const box2d_Vec2* worldPoint);
box2d_Vec2 box2d_Body_GetLinearVelocityFromLocalPoint(const box2d_Body* self, const box2d_Vec2* localPoint);
float32 box2d_Body_GetLinearDamping(const box2d_Body* self);
void box2d_Body_SetLinearDamping(box2d_Body* self, float32 linearDamping);
float32 box2d_Body_GetAngularDamping(const box2d_Body* self);
void box2d_Body_SetAngularDamping(box2d_Body* self, float32 angularDamping);
float32 box2d_Body_GetGravityScale(const box2d_Body* self);
void box2d_Body_SetGravityScale(box2d_Body* self, float32 scale);
void box2d_Body_SetType(box2d_Body* self, int type);
box2d_BodyType box2d_Body_GetType(const box2d_Body* self);
void box2d_Body_SetBullet(box2d_Body* self, box2d_bool flag);
box2d_bool box2d_Body_IsBullet(const box2d_Body* self);
void box2d_Body_SetSleepingAllowed(box2d_Body* self, box2d_bool flag);
box2d_bool box2d_Body_IsSleepingAllowed(const box2d_Body* self);
void box2d_Body_SetAwake(box2d_Body* self, box2d_bool flag);
box2d_bool box2d_Body_IsAwake(const box2d_Body* self);
void box2d_Body_SetActive(box2d_Body* self, box2d_bool flag);
box2d_bool box2d_Body_IsActive(const box2d_Body* self);
void box2d_Body_SetFixedRotation(box2d_Body* self, box2d_bool flag);
box2d_bool box2d_Body_IsFixedRotation(const box2d_Body* self);
box2d_Fixture* box2d_Body_GetFixtureList(box2d_Body* self);
box2d_JointEdge* box2d_Body_GetJointList(box2d_Body* self);
box2d_ContactEdge* box2d_Body_GetContactList(box2d_Body* self);
box2d_Body* box2d_Body_GetNext(box2d_Body* self);
void* box2d_Body_GetUserData(const box2d_Body* self);
void box2d_Body_SetUserData(box2d_Body* self, void* data);
box2d_World* box2d_Body_GetWorld(box2d_Body* self);
void box2d_Body_Dump(box2d_Body* self);