c/src/Box2D/Dynamics/c_box2d_world.h


box2d_World* box2d_World_Create(const box2d_Vec2* gravity);
void box2d_World_Destroy(box2d_World* self);
void box2d_World_SetDestructionListener(box2d_World* self, box2d_DestructionListener* listener);
void box2d_World_SetContactFilter(box2d_World* self, box2d_ContactFilter* filter);
void box2d_World_SetContactListener(box2d_World* self, box2d_ContactListener* listener);
void box2d_World_SetDebugDraw(box2d_World* self, box2d_Draw* debugDraw);
box2d_Body* box2d_World_CreateBody(box2d_World* self, const box2d_BodyDef* def);
void box2d_World_DestroyBody(box2d_World* self, box2d_Body* body);
box2d_Joint* box2d_World_CreateJoint(box2d_World* self, const box2d_JointDef* def);
void box2d_World_DestroyJoint(box2d_World* self, box2d_Joint* joint);
void box2d_World_Step(box2d_World* self,
                      float32 timeStep,
                      int32 velocityIterations,
                      int32 positionIterations);
void box2d_World_ClearForces(box2d_World* self);
void box2d_World_DrawDebugData(box2d_World* self);
void box2d_World_QueryAABB(const box2d_World* self, box2d_QueryCallback* callback, const box2d_AABB* aabb);
void box2d_World_RayCast(const box2d_World* self, box2d_RayCastCallback* callback, const box2d_Vec2* point1, const box2d_Vec2* point2);
box2d_Body* box2d_World_GetBodyList(box2d_World* self);
box2d_Joint* box2d_World_GetJointList(box2d_World* self);
box2d_Contact* box2d_World_GetContactList(box2d_World* self);
void box2d_World_SetAllowSleeping(box2d_World* self, box2d_bool flag);
box2d_bool box2d_World_GetAllowSleeping(const box2d_World* self);
void box2d_World_SetWarmStarting(box2d_World* self, box2d_bool flag);
box2d_bool box2d_World_GetWarmStarting(const box2d_World* self);
void box2d_World_SetContinuousPhysics(box2d_World* self, box2d_bool flag);
box2d_bool box2d_World_GetContinuousPhysics(const box2d_World* self);
void box2d_World_SetSubStepping(box2d_World* self, box2d_bool flag);
box2d_bool box2d_World_GetSubStepping(const box2d_World* self);
int32 box2d_World_GetProxyCount(const box2d_World* self);
int32 box2d_World_GetBodyCount(const box2d_World* self);
int32 box2d_World_GetJointCount(const box2d_World* self);
int32 box2d_World_GetContactCount(const box2d_World* self);
int32 box2d_World_GetTreeHeight(const box2d_World* self);
int32 box2d_World_GetTreeBalance(const box2d_World* self);
float32 box2d_World_GetTreeQuality(const box2d_World* self);
void box2d_World_SetGravity(box2d_World* self, const box2d_Vec2* gravity);
box2d_Vec2 box2d_World_GetGravity(const box2d_World* self);
box2d_bool box2d_World_IsLocked(const box2d_World* self);
void box2d_World_SetAutoClearForces(box2d_World* self, box2d_bool flag);
box2d_bool box2d_World_GetAutoClearForces(const box2d_World* self);
const box2d_ContactManager* box2d_World_GetContactManager(const box2d_World* self);
const box2d_Profile* box2d_World_GetProfile(const box2d_World* self);
void box2d_World_Dump(box2d_World* self);