c/src/Box2D/Dynamics/c_box2d_fixture.h


typedef struct box2d_Filter
{
    uint16 categoryBits;
    uint16 maskBits;
    int16 groupIndex;
} box2d_Filter;
typedef struct box2d_FixtureDef
{
    box2d_Shape* shape;
    void* userData;
    float32 friction;
    float32 restitution;
    float32 density;
    box2d_bool isSensor;
    box2d_Filter filter;
} box2d_FixtureDef;
box2d_FixtureDef box2d_FixtureDef_create();
int box2d_Fixture_GetType(const box2d_Fixture* self);
box2d_Shape* box2d_Fixture_GetShape(box2d_Fixture* self);
void box2d_Fixture_SetSensor(box2d_Fixture* self, box2d_bool sensor);
box2d_bool box2d_Fixture_IsSensor(const box2d_Fixture* self);
void box2d_Fixture_SetFilterData(box2d_Fixture* self, const box2d_Filter* filter);
const box2d_Filter* box2d_Fixture_GetFilterData(const box2d_Fixture* self);
void box2d_Fixture_Refilter(box2d_Fixture* self);
box2d_Body* box2d_Fixture_GetBody(box2d_Fixture* self);
box2d_Fixture* box2d_Fixture_GetNext(box2d_Fixture* self);
void* box2d_Fixture_GetUserData(const box2d_Fixture* self);
void box2d_Fixture_SetUserData(box2d_Fixture* self, void* data);
box2d_bool box2d_Fixture_TestPoint(const box2d_Fixture* self, const box2d_Vec2* p);
box2d_bool box2d_Fixture_RayCast(const box2d_Fixture* self, box2d_RayCastOutput* output, const box2d_RayCastInput* input, int32 childIndex);
void box2d_Fixture_GetMassData(const box2d_Fixture* self, box2d_MassData* massData);
void box2d_Fixture_SetDensity(box2d_Fixture* self, float32 density);
float32 box2d_Fixture_GetDensity(const box2d_Fixture* self);
float32 box2d_Fixture_GetFriction(const box2d_Fixture* self);
void box2d_Fixture_SetFriction(box2d_Fixture* self, float32 friction);
float32 box2d_Fixture_GetRestitution(const box2d_Fixture* self);
void box2d_Fixture_SetRestitution(box2d_Fixture* self, float32 restitution);
const box2d_AABB* box2d_Fixture_GetAABB(const box2d_Fixture* self, int32 childIndex);
void box2d_Fixture_Dump(box2d_Fixture* self, int32 bodyIndex);